example/sentinel-dashboard-k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel-dashboard-headless
  labels:
    app: sentinel-dashboard-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8080
      name: server
      targetPort: 8080
  selector:
    app: sentinel-dashboard
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentinel-dashboard
spec:
  serviceName: sentinel-dashboard-headless
  replicas: 3
  template:
    metadata:
      labels:
        app: sentinel-dashboard
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - sentinel-dashboard
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: k8ssentinel-dashboard
          imagePullPolicy: Always
          image: solvaysphere/sentinel-dashboard:1.8.2
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: client
  selector:
    matchLabels:
      app: sentinel-dashboard
