example/sentinel-dashboard-ingress-k8s.yaml
###使用Ingress发布配置后台###
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel-dashboard-headless
  labels:
    app: sentinel-dashboard-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8080
      name: server
      targetPort: 8080
  selector:
    app: sentinel-dashboard
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentinel-dashboard
spec:
  serviceName: sentinel-dashboard-headless
  replicas: 1
  template:
    metadata:
      labels:
        app: sentinel-dashboard
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - sentinel-dashboard
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: k8ssentinel-dashboard
          imagePullPolicy: Always
          image: solvaysphere/sentinel-dashboard:1.8.2
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: client
  selector:
    matchLabels:
      app: sentinel-dashboard


---
# ------------------- App Ingress ------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentinel-dashboard-headless
  namespace: default

spec:
  rules:
    - host: sentinel-dashboard.solvaysphere.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sentinel-dashboard-headless
              servicePort: server
